# term2d

./: Cargo.toml  README.md
examples/alpha/: Cargo.toml
examples/alpha/src/: main.rs
examples/animation/: Cargo.toml
examples/animation/src/: main.rs
examples/dot/: Cargo.toml  main.rs
examples/dot/src/: main.rs
examples/minimal/: Cargo.toml
examples/minimal/src/: main.rs
examples/new/: Cargo.toml
examples/new/src/: main.rs
examples/snake/: Cargo.toml  controller.rs  main.rs  random.rs  renderer.rs  state.rs
examples/snake/src/: controller.rs  main.rs  random.rs  renderer.rs  state.rs
examples/term3d/: Cargo.toml
examples/term3d/src/: main.rs  model.rs
examples/term3d/src/model/: camera.rs  face.rs  init.rs  mesh.rs  (+1 more)
examples/tetris/: Cargo.toml
examples/tetris/src/: controller.rs  main.rs  model.rs  view.rs
examples/water/: Cargo.toml
examples/water/src/: controller.rs  main.rs  random.rs  renderer.rs  state.rs  water_rules.rs  world.rs
src/: color.rs  lib.rs  renderer.rs  screen.rs
src/renderer/: half_block_renderer.rs
term2d/: Cargo.toml  README.md
term2d/src/: color.rs  controller.rs  lib.rs  model.rs  point.rs  rect.rs  renderer.rs  screen.rs  view.rs
term2d/src/model/: ansiesc.rs  circle.rs  color.rs  config.rs  event.rs  image.rs  key.rs  point.rs  polygon.rs  rect.rs  rgba.rs  video.rs
term2d/src/renderer/: full_block_renderer.rs  half_block_renderer.rs
term2d/src/view/: canvas.rs  renderer.rs  screen.rs
term2d/src/view/canvas/: fullblock.rs  halfblock.rs
term2d/src/view/renderer/: image.rs  primitive.rs
(+2 files in other folders)
