[package]
authors = ["golmman"]
description = "Simple drawing engine for terminal applications"
documentation = "https://github.com/golmman/term2d/blob/main/README.md"
edition = "2021"
homepage = "https://github.com/golmman/term2d"
keywords = ["terminal", "2d"]
license-file = "./LICENSE"
name = "term2d"
repository = "https://github.com/golmman/term2d"
version = "0.1.0"

[dependencies]
signal-hook = "0.3.13"
termion = "1.5.6"
