[package]
authors = ["golmman"]
description = "Simple drawing engine for terminal applications"
documentation = "https://docs.rs/term2d"
edition = "2021"
homepage = "https://github.com/golmman/term2d"
keywords = ["terminal", "2d", "graphics", "color"]
license = "MIT"
name = "term2d"
repository = "https://github.com/golmman/term2d"
version = "0.8.2"

[dependencies]
signal-hook = "0.3.13"
termion = "1.5.6"
